# libapache2_mod_authn_zakauthe

./: .gitignore  configure.ac
debian/: apache2  authn_zakauthe.load  changelog  control  copyright  libapache2-mod-authn-zakauthe.install  rules
debian/patches/: 0002-Apache-api-old-version.patch  0002-Constants-not-defined.patch  0003-Forced-g_type-init.patch  series
src/: Makefile.am  mod_authn_zakauthe.c
